# SonicFrontiersModding

./: .gitignore  LICENSE  ModCodes.hmm  ModReadme.txt  README.md  mod.ini
assets/character/playercommon.pac/: player_camera.rfl  player_common.rfl
assets/character/sonic_crown.pac/: burger_crown.dds  chr_sonic_cloth.material  chr_sonic_cloth_abd.dds  chr_sonic_cloth_nrm.dds  chr_sonic_cloth_prm.dds  chr_sonic_crown.model  chr_sonic_crown_body.material  chr_sonic_crown_body_nrm.dds  chr_sonic_crown_body_prm.dds  chr_sonic_eyeL.material  chr_sonic_eyeR.material  chr_sonic_eye_abd.dds  chr_sonic_eye_nra.dds  chr_sonic_eye_prm.dds  chr_sonic_eye_spt.dds  chr_sonic_fur.material  chr_sonic_fur_abd.dds  chr_sonic_fur_fal.dds  chr_sonic_fur_flw.dds  chr_sonic_fur_fur.dds  chr_sonic_fur_nrm.dds  chr_sonic_fur_prm.dds  chr_sonic_mouth.material  chr_sonic_skin.material  chr_sonic_skin_abd.dds  chr_sonic_skin_fal.dds  chr_sonic_skin_nrm.dds  chr_sonic_skin_prm.dds
assets/misc/gameparam.pac/: cyknuckle_hole.rfl  exp.rfl  gameparam_misc.level  gfx_noise_preset.rfl  grass_interaction.rfl  grind_lod_cyber.rfl  grind_lod_island.rfl  (+7 more)
docs/: Build.md  Diff Binary.md  HMM-Code-Guide.md  HMM-Codes.md  Learning Resources.md  Model Conversion.md  Nerdy Stuff.md  RFLTemplates.md  Resources for Modding and Learning.md  TODO.md
docs/etc/: SuperSonicCombat.md
docs/portnotes/: player_common-140.xml  player_common.xml
etc/sonic_crown/: .gitignore  burger_crown.dds  credits.txt
tools/main/: Cargo.toml
tools/main/src/: args.rs  config.rs  file.rs  main.rs  pac.rs  text.rs  util.rs  zip.rs
(+292 files in other folders)
