[package]
name = "proj_tools"
description = "Various build tools for the project bundled together"
authors = ["Icedude907"]
homepage = "https://github.com/Icedude907"

readme = "README.md"
version = "0.0.0"
edition = "2021"


[dependencies]
clap = {version = "4.4.6", features = ["derive"]} # Command Line Parsing
walkdir = "2.4.0" # Convenience for recursively consuming directory members
once_cell = "1.18.0" # Immutable globals. Backend for SuperLazy (mutable globals)
# futures = "0.3.28" # Async execution